<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0F7FA"
    tools:context=".MainActivity"
    android:id="@+id/main">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/questions"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:paddingTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/header"
        >

        <LinearLayout
            android:id="@+id/questionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:orientation="vertical" />

    </ScrollView>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:textSize="10dp"
        android:text="@string/reset"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnViewResult"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        style="@style/Button.Warning"/>

    <Button
        android:id="@+id/btnViewResult"
        android:layout_width="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_height="32dp"
        android:textSize="10dp"
        android:text="@string/view_result"
        app:layout_constraintStart_toEndOf="@+id/btnReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        style="@style/Button.Primary"/>

</androidx.constraintlayout.widget.ConstraintLayout>